#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/atomic)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/config)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/thread)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/container)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/math)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(HEADERS
   ${HEADERS}
   ${CMAKE_CURRENT_SOURCE_DIR}/audiomanagerbase.h
   ${CMAKE_CURRENT_SOURCE_DIR}/audiosource.h
   ${CMAKE_CURRENT_SOURCE_DIR}/audiobuffer.h
   ${CMAKE_CURRENT_SOURCE_DIR}/audiodevice.h
   ${CMAKE_CURRENT_SOURCE_DIR}/audiocontrol.h
   ${CMAKE_CURRENT_SOURCE_DIR}/audiolistener.h
   ${CMAKE_CURRENT_SOURCE_DIR}/audiofile.h
   ${CMAKE_CURRENT_SOURCE_DIR}/audiomanager.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/audioimport.h
   PARENT_SCOPE
)
