ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/atomic)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/config)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/thread)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/container)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/xml)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/math)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(HEADERS
   ${HEADERS}
   ${CMAKE_CURRENT_SOURCE_DIR}/asserts.h
   ${CMAKE_CURRENT_SOURCE_DIR}/atomic.h
   ${CMAKE_CURRENT_SOURCE_DIR}/convert.h
   ${CMAKE_CURRENT_SOURCE_DIR}/delegates.h
   ${CMAKE_CURRENT_SOURCE_DIR}/directory.h
   ${CMAKE_CURRENT_SOURCE_DIR}/dynamiclibrary.h
   ${CMAKE_CURRENT_SOURCE_DIR}/file.h
   ${CMAKE_CURRENT_SOURCE_DIR}/logger.h
   ${CMAKE_CURRENT_SOURCE_DIR}/memory.h
   ${CMAKE_CURRENT_SOURCE_DIR}/strings.h
   ${CMAKE_CURRENT_SOURCE_DIR}/thread.h
   ${CMAKE_CURRENT_SOURCE_DIR}/utilities.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/container.h
   ${CMAKE_CURRENT_SOURCE_DIR}/plugin.h
   PARENT_SCOPE
)
