ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/xml)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/container)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/control)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(SOURCES
   ${SOURCES}
   ${CMAKE_CURRENT_SOURCE_DIR}/logger.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/file.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/tools.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/asserts.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/strings.cpp
#   ${CMAKE_CURRENT_SOURCE_DIR}/resourcemanager.cpp
#   ${CMAKE_CURRENT_SOURCE_DIR}/configuration.cpp
#   ${CMAKE_CURRENT_SOURCE_DIR}/pluginmanager.cpp
   PARENT_SCOPE
)
