#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/audio)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/container)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/control)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(SOURCES
   ${SOURCES}
   ${CMAKE_CURRENT_SOURCE_DIR}/configuration.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/pluginmanager.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/resourcemanager.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/resourcefilter.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/componentfactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/squareworld.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/system.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/converter.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/convertfilter.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/directorylistener.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/componentsystem.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/componenttype.cpp
   PARENT_SCOPE
)
