#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/atomic)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/config)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/thread)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/container)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/math)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(HEADERS
   ${HEADERS}
   ${CMAKE_CURRENT_SOURCE_DIR}/test.h
   ${CMAKE_CURRENT_SOURCE_DIR}/physicsystem2d.h
   ${CMAKE_CURRENT_SOURCE_DIR}/physictypes2d.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/logger.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/strings.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/utilities.h
   PARENT_SCOPE
)
