ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2d)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/3d)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/control)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(SOURCES
   ${SOURCES}
   ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/font.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/rendercontext.cpp
   PARENT_SCOPE
)
