ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2d)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/3d)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/gui)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(SOURCES
   ${SOURCES}
   ${CMAKE_CURRENT_SOURCE_DIR}/baseinput.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/mouseinput.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/keyboardinput.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/controllerinput.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/inputmanager.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/font.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/rendercontext.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/renderwindow.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/renderer.cpp
   PARENT_SCOPE
)
