#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/atomic)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/config)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/thread)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/container)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/math)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(HEADERS
   ${HEADERS}
   ${CMAKE_CURRENT_SOURCE_DIR}/testcomponent.h
   ${CMAKE_CURRENT_SOURCE_DIR}/transformation2d.h
   ${CMAKE_CURRENT_SOURCE_DIR}/rectangle.h
   ${CMAKE_CURRENT_SOURCE_DIR}/roundedrectangle.h
   ${CMAKE_CURRENT_SOURCE_DIR}/circle.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/networkcommandqueue.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/udpnetwork.h
   PARENT_SCOPE
)
