#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/audio)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/container)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/control)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(SOURCES
   ${SOURCES}
   ${CMAKE_CURRENT_SOURCE_DIR}/testcomponent.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/componentsplugin.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/transformation2d.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/circle.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/rectangle.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/roundedrectangle.cpp
   PARENT_SCOPE
)
