#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/audio)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/container)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/control)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(SOURCES
   ${SOURCES}
   ${CMAKE_CURRENT_SOURCE_DIR}/testplugin.cpp
#   ${CMAKE_CURRENT_SOURCE_DIR}/networkcommandqueue.cpp
#   ${CMAKE_CURRENT_SOURCE_DIR}/udpconnection.cpp
#   ${CMAKE_CURRENT_SOURCE_DIR}/udpreliability.cpp
#   ${CMAKE_CURRENT_SOURCE_DIR}/udpnetwork.cpp
   PARENT_SCOPE
)
