#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2d)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/3d)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/thread)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/container)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/math)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(HEADERS
   ${HEADERS}
   ${CMAKE_CURRENT_SOURCE_DIR}/2delements.h
   ${CMAKE_CURRENT_SOURCE_DIR}/guimanager.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/asserts.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/logger.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/strings.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/utilities.h
   PARENT_SCOPE
)
