#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2d)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/3d)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/thread)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/container)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/math)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(HEADERS
   ${HEADERS}
   ${CMAKE_CURRENT_SOURCE_DIR}/guiobject.h
   ${CMAKE_CURRENT_SOURCE_DIR}/interactiveguiobject.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/guielements.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/guimanager.h
   ${CMAKE_CURRENT_SOURCE_DIR}/guisystem.h
#   ${CMAKE_CURRENT_SOURCE_DIR}/utilities.h
   PARENT_SCOPE
)
